--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                             <h5>Contact Us</h5>
                             <ul>
                             	<li><a href="mailto:harshitvarshney78@gmail.com">harshitvarshney1215@gmail.com</a></li>
-                            	<li><a href="mailto:shuklaayush1215@gmail.com">shuklaayush1215@gmail.com</a></li>
+                            	<li><a href="mailto:shuklaayush1215@gmail.com">harshitvarshney@creaz.tech</a></li>
                             </ul>
                         </div>
                     </div>
